test/files/neg/bug500.check
bug500.scala:3: error: lower bound X does not conform to upper bound Y
    type T >: X <: Y;
         ^
one error found
